[fix] disabling, hopefully for the last time, eslint on those damn css file

--- a/adminMongo/public/css/style.css
+++ b/adminMongo/public/css/style.css
@@ -1,3 +1,5 @@
+/*eslint-disable */
+
 @media (max-width: 980px) {
     body {
         padding-bottom: 0px;
@@ -506,3 +508,4 @@ h4{
         left: 0;
     }
 }
+/*eslint-enable*/
